minor change to button line height to prevent overlap at certain screen widths

--- a/src/App.css
+++ b/src/App.css
@@ -24,12 +24,12 @@
   flex-direction: row;
   justify-content: space-evenly;
   width: 100%;
+  line-height: 1.5rem;
 }
 
 .app_button {
   font-family: "Press Start 2P", cursive;
   width: 40%;
-  line-height: 1.3rem;
   border: 4px solid #f8f8f8;
   background-color: #f8b800;
   padding: 3%;
@@ -43,6 +43,7 @@
 
   .app_button {
     padding: 1%;
+    line-height: 2.5rem;
   }
 }
 
